--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,23 @@
     "resources": {
         "media": [
             {
+                "file": "fonts/HelveNeuLig.ttf",
+                "name": "FONT_HELV_NEW_LIGHT_20",
+                "type": "font"
+            },
+            {
+                "characterRegex": "[:0-9]",
+                "file": "fonts/Roboto-Bold.ttf",
+                "name": "FONT_ROBOTO_BOLD_SUBSET_45",
+                "type": "font"
+            },
+            {
+                "characterRegex": "[:0-9]",
+                "file": "fonts/Roboto-Bold.ttf",
+                "name": "FONT_ROBOTO_BOLD_SUBSET_40",
+                "type": "font"
+            },
+            {
                 "file": "images/Planetary Menu BW.png",
                 "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
@@ -18,17 +35,6 @@
                 "file": "images/Planetary Society Logo BW.png",
                 "name": "IMAGE_PLANETARY_LOGO",
                 "type": "png"
-            },
-            {
-                "characterRegex": "[:0-9]",
-                "file": "fonts/Roboto-Bold.ttf",
-                "name": "FONT_ROBOTO_BOLD_SUBSET_45",
-                "type": "font"
-            },
-            {
-                "file": "fonts/HelveNeuLig.ttf",
-                "name": "FONT_HELV_NEW_LIGHT_20",
-                "type": "font"
             }
         ]
     },
@@ -36,10 +42,11 @@
     "shortName": "Planetary",
     "targetPlatforms": [
         "aplite",
-        "basalt"
+        "basalt",
+        "chalk"
     ],
     "uuid": "A69FB496-B313-4655-AAC7-2DB1439AEB2F",
-    "versionLabel": "1.01",
+    "versionLabel": "2.00",
     "watchapp": {
         "watchface": true
     }
